apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-nginx-helloworld-git
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: example-nginx-helloworld-git
  sessionAffinity: None
  type: ClusterIP
