apps/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: example-nginx-helloworld-git
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: example-nginx-helloworld-git
    weight: 100
  wildcardPolicy: None
